# opengl

./: CMakeLists.txt  build.ps1  build.sh  glad.c  main.cpp
include/glad/: glad.h
lib/Debug/: libbase.lib  libmatrix.lib  libshader.lib  libtexture.lib  libwindow.lib
rc/: shader.fs  shader.vs
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.cpp  base.h  camera.cpp  camera.h  shader.cpp  shader.h
src/camera/: CMakeLists.txt  camera.cpp
src/coordinate/: CMakeLists.txt  coordinate.cpp  shader_mix.vs
src/light/: CMakeLists.txt  light.cpp  light.fs
src/matrix/: CMakeLists.txt  matrix.cpp  shader_mix.vs
src/shader/: CMakeLists.txt  shader.cpp  shader.vs  shaderTest.cpp  shader_multi.fs  shader_multi.vs  shader_pos_2_color.fs  shader_pos_2_color.vs  shader_uniform.fs  shader_uniform.vs  shader_uniform_level.vs  shader_up_down.vs
src/texture/: CMakeLists.txt  shader.fs  shader_mix.fs  shader_up_down.fs  texture.cpp
src/window/: CMakeLists.txt  shader.fs  shader2.fs  window.cpp
